<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:text="@string/ip_adress"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_server_ip_adress"
        android:id="@+id/etvIPadress"
        android:background="@drawable/edittext_design"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:text="@string/chat_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_your_name"
        android:id="@+id/etvName"
        android:background="@drawable/edittext_design"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_chat"
        android:textColor="#ffffff"
        android:background="@drawable/button_design"
        android:id="@+id/btnEnterChat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:text="@string/encrypting_method"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">

        <RadioButton android:id="@+id/radRSA"
            android:layout_width="0dp"
            android:checked="true"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rsa"/>

        <RadioButton android:id="@+id/radElgamal"
            android:layout_width="0dp"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/elgamel"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/sectionRSA"
        android:visibility="visible">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/first_prime_factor"
            android:id="@+id/etvFirstPrime"
            android:background="@drawable/edittext_design"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/second_prime_factor"
            android:id="@+id/etvSecondPrime"
            android:background="@drawable/edittext_design"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/sectionElGamal"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/prime_p"
            android:id="@+id/etvPrimeP"
            android:background="@drawable/edittext_design"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/alpha"
            android:id="@+id/etvAlpha"
            android:background="@drawable/edittext_design"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/factor_g"
            android:id="@+id/etvFactorG"
            android:background="@drawable/edittext_design"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>